src/objects/Expert_Achievement__c.object
<CustomObject>
    <fields>
        <fullName>Achievement__c</fullName>
        <label>Achievement</label>
        <referenceTo>Achievement__c</referenceTo>
        <relationshipLabel>Expert Achievements</relationshipLabel>
        <relationshipName>Expert_Achievements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Certification_Date__c</fullName>
        <label>Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expert Achievements</relationshipLabel>
        <relationshipName>Expert_Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_From_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created From Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holder_Name__c</fullName>
        <label>Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Expert Achievements</relationshipLabel>
        <relationshipName>Expert_Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <formula>Achievement__r.Logo__c</formula>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deprecated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(Achievement__r.RecordType.Name == &apos;Salesforce Certification&apos;, &apos;Salesforce Certification&apos;,  IF(Achievement__r.RecordType.Name == &apos;Trailhead Badge&apos;, &apos;Trailhead Badge&apos;, &apos;Other&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Expert Achievement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Achievement__c</columns>
        <columns>Type__c</columns>
        <columns>Contact__c</columns>
        <columns>Lead__c</columns>
        <columns>Status__c</columns>
        <columns>Certification_Date__c</columns>
        <columns>Created_From_Sync__c</columns>
        <columns>Holder_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Expert Achievement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expert Achievements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>